# A2A

demo/ui/: .env.local
samples/python/: pyproject.toml
samples/python/agents/crewai/: agent.py
samples/python/agents/generic_agent/: __main__.py  agent.py  task_manager.py
samples/python/agents/google_adk/: agent.py
samples/python/agents/search_agnt/: __main__.py  agent.py  pyproject.toml  task_manager.py
samples/python/agents/sql_agent/: README.md  __main__.py  agent.py  pyproject.toml  task_manager.py
samples/python/common/: pyproject.toml
samples/python/hosts/cli/: __main__.py
