# pyproject.toml

[project]
name = "common"
version = "0.1.0"
description = "Common utilities for A2A agents"
requires-python = ">=3.8"

[tool.setuptools]
packages = ["common", "common.server", "common.client", "common.utils"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta" 